xx yyy 2009: 0.6.7 Miek <miek@miek.nl>
  * rdup-backups.7: typo (Johann Klähn)
  * rdup-simple.sh: check for a minimum of 2 arguments (Tom Hendrikx)
  * rdup-simple.sh: fix -f (full dump)
  * rdup-up: add mkpath (works like mkdir -p) function and fix -t option
    (reported by Tom Hendrikx)
  * rdup-simple.sh/rdup-ln.sh:  only report errors on stderr, for the rest 
    use stdout (Tom Hendrikx)
  * rdup: honor .nobackup files again (Tom Hendrikx)



12 Jan 2009: 0.6.6 Miek <miek@miek.nl>
  * fix to minor bug in rdup-simple which prevented local
    backups from working. (Tom Hendrikx)
  * do a fclose() in fs-up.c (Tom Hendrikx)


10 Jan 2009: 0.6.5 Miek <miek@miek.nl>
  * rdup-simple back as rdup-simple.sh, re-written to 
    use rdup-tr and rdup-up
    (installs to /usr/lib/rdup)
  * rdup-ln.sh: small tweaks and bugfixes
  * rdup-tr: also handle files that should be removed
  * don't include glib/stdio.h as this needs a glib version
    which is too new. (Dag Wieers)


30 Dec 2008: 0.6.4 Miek <miek@miek.nl>
 - further refinements and tweaks -
  * rdup-up: further updates and refinements
  * rdup-up: added strippath() function to strip leading path components
  * doc: minor updates to the manual pages, added a rdup-simple like
    script to rdup-backups.7
  * rdup-ln.sh: a shell script for checking and copying a previous
    rdup backup. Depends on GNU date and GNU cp. Installs into 
    /usr/lib/rdup/. Previously a small script called rdup-snap-link
    did this.


17 Dec 2008: 0.6.4-rc1 Miek <miek@miek.nl>
  - major feature enhancements, two new programs -
    + rdup-tr: transform rdup output to something else
    + rdup-up: update a directory tree with rdup archive

 * rdup: Added '%N' to the format string, which prints the
   path, but in case of soft- and hardlinks it will only
   print the link's name not the '-> target' part
 * rdup: rdup.1.in had a long deserved make-over
 * rdup: Print symlinks correctly when there named on the cmd line